
  [ Translations of programs ]
  * Vietnamese updated. Closes: #343848
  * Polish updated. Closes: #344140
  * Greek updated.

  [ Joey Hess ]
  * When running aptitude in debconf-apt-progress, pass -q to it to disable
    incremental progress displays being logged to stderr, since eg in d-i that
    results in a lot (possibly many megabytes) of download progress info in
    the logs.

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Dec 2005 16:45:55 -0500

tasksel (2.37) unstable; urgency=low

  * In debconf test, also test for DEBCONF_READFD being set, to detect when
    tasksel is being run with a passthrough debconf frontend configured,

 -- Joey Hess <joeyh@debian.org>  Sun,  4 Dec 2005 17:27:59 -0500

tasksel (2.36) unstable; urgency=low

  * Hmm, remove --logfile and --logstderr, add more general
    --debconf-apt-progress="options" setting.

 -- Joey Hess <joeyh@debian.org>  Sun,  4 Dec 2005 16:46:40 -0500

tasksel (2.35) unstable; urgency=low

  * Set section to admin to match overrides.
  * Add --logfile and --logstderr options.

 -- Joey Hess <joeyh@debian.org>  Sun,  4 Dec 2005 16:10:33 -0500

tasksel (2.34) unstable; urgency=low

  [ Joey Hess ]
  * Manual package selection is now less of a special case, with an actual
    task entry for it that can have test scripts like other task entries,
    etc.
  * Check for running under the debconf frontend and if it is, do as much as
    possible to avoid outputting non-debconf protocol to stdout, including:
    - Don't display the manual task.
    - Don't clear the screen before running aptitude.
  * Use debconf-apt-progress during installs if available (except if the user
    chooses manual selection), to get a fancy progress bar and completly limit
    output when run inside debconf to debconf protocol output.
  * Use debconf-apt-progress for removals too.
  * Pass -y to aptitude remove.
  * Remove fairly obsolete screen clearing code

  [ Translations of tasks ]
  * French updated
  * Czech updated